[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/monsters/character_0000.png" type="Texture" id=1]
[ext_resource path="res://scenes/Monster.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16.75, 17.5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 16, 17.5 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 17.5 )

[node name="Monster" type="KinematicBody2D"]
collision_layer = 0
collision_mask = 16
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0.25, 0.5 )
shape = SubResource( 2 )

[node name="do_damage" type="Area2D" parent="."]
visible = false
position = Vector2( 0, 1 )
scale = Vector2( 0.999998, 1 )
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="do_damage"]
position = Vector2( -2.38419e-07, -0.5 )
shape = SubResource( 3 )

[node name="take_damage" type="Area2D" parent="." groups=["enemy"]]
scale = Vector2( 1.58333, 1.5 )
collision_layer = 32
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="take_damage"]
position = Vector2( 0, 0.333333 )
scale = Vector2( 0.631579, 0.666667 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( -1.583, 1.5 )
texture = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 1.5
autostart = true

[node name="Label" type="Label" parent="."]
margin_left = -27.0
margin_top = 19.0
margin_right = 35.0
margin_bottom = 33.0
text = "green guy"

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
